# offline-wallet

./: .eslintignore  .eslintrc.cjs  .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc.json  ARCHITECTURE.md  BUILD-GUIDE.md  Cargo.toml  DUAL_APP_SETUP.md  HOT_WALLET_PROGRESS.md  ICON-SETUP.md  ICONS-SETUP.md  MNEMONIC_STORAGE_LIFECYCLE.md  MULTI-CHAIN-SUPPORT.md  PRODUCTION.md  README.md  REDESIGN-NOTES.md  ROADMAP.md  TESTING.md  UPGRADE-SUMMARY.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/actions/setup-build-env/: action.yml
.github/workflows/: README.md  build-macos.yml  build-mobile.yml  build-windows.yml  ci.yml  mobile-build.yml  mobile-release.yml  release-cold-desktop.yml  release-cold-mobile.yml  release-hot-desktop.yml  release-hot-mobile.yml  release.yml
.husky/: pre-push
docs/: CARGO_DEPENDENCY_ANALYSIS.md  CODE_SIGNING.md  GITHUB_SECRETS.md  MOBILE_STORAGE.md  RELEASE_GUIDE.md  SIGNING_SUMMARY.md  VIEWPORT_HEIGHT_SOLUTION.md  WEB_APP_STYLE_COMPATIBILITY.md
public/icons/: manifest.json
scripts/: README.md  add-password-to-key.sh  dev.sh  fetch_chain_icons.py  fetch_chain_icons.sh  generate-signing-keys.sh  generate-wallet-icons.js  release.sh  setup-signing.sh
signing/: README.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  qrcode_gen.rs  webview_perf.rs
src-tauri/src/chains/: bitcoin.rs  bnb.rs  mod.rs  tron.rs
src-tauri/src/crypto/: mnemonic.rs  mod.rs  password_strength.rs  secure_storage.rs
src-tauri/src/security/: auto_lock.rs  mod.rs
src/components/: AppFooter.vue  AppHeader.vue  BaseButton.vue  BaseInput.vue  BottomNavigation.vue  EncryptionGuideDialog.vue  ErrorBoundary.vue  ExitConfirmDialog.vue  LanguageSwitcher.vue  MessageSetup.vue  SecuritySettings.vue  SettingsDrawer.vue  SplashScreen.vue  ThemeSwitcher.vue  ToastContainer.vue  UnlockWallet.vue
src/components/__tests__/: AppHeader.test.ts  BottomNavigation.test.ts  ErrorBoundary.test.ts  ExitConfirmDialog.test.ts
src/components/backup/: BackupPage.vue
src/components/common/: AddressEllipsis.vue  EmptyState.vue  ErrorState.vue  LoadingState.vue  QRCodeWithLogo.vue
src/components/common/__tests__/: AddressEllipsis.test.ts  EmptyState.test.ts  ErrorState.test.ts  LoadingState.test.ts  QRCodeWithLogo.test.ts
src/components/start/: StartPage.vue
src/components/wallet/: AccountPage.vue  AddressDisplay.vue  ChainSelector.vue  ReceivePage.vue  SecurityStatusBanner.vue  SettingsPage.vue  TransactionForm.vue  TransactionPage.vue  WalletPage.vue
src/components/wallet/__tests__/: TransactionForm.test.ts
src/composables/: useAppLayout.ts  useAppState.ts  useAutoLock.ts  useBiometric.ts  useErrorHandler.ts  useMemoryEncryption.ts  useMessage.ts  usePasswordStrength.ts  usePerformanceOptimization.ts  usePlatform.ts  useTheme.ts  useViewportHeight.ts  useWalletStorage.ts  useWebViewPerformance.ts
src/composables/__tests__/: useAppLayout.test.ts  useAppState.test.ts  useAutoLock.test.ts  useBiometric.test.ts  useErrorHandler.test.ts  useMemoryEncryption.test.ts  useMessage.test.ts  usePasswordStrength.test.ts  usePlatform.test.ts  useTheme.test.ts  useWalletStorage.comprehensive.test.ts  useWalletStorage.test.ts
src/i18n/: index.ts
src/i18n/locales/: en-US.ts  zh-CN.ts
src/stores/: ui.ts  wallet.ts
src/stores/__tests__/: ui.test.ts  wallet.integration.test.ts  wallet.test.ts
src/styles/: apple-design-system.css  design-tokens.css  global.css  mobile-compatibility.css
src/test/: example.test.ts  setup.ts  test-utils.ts  utils.ts
src/utils/: errorHandler.ts
src/utils/__tests__/: errorHandler.test.ts
