[workspace]
members = [
    "packages/shared/src-tauri",
    "packages/cold-wallet/src-tauri",
    "packages/hot-wallet/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qrcode = "0.14"
image = "0.24"
base64 = "0.22"

