[workspace]
members = [
    "packages/shared/src-tauri",
    "packages/cold-wallet/src-tauri",
    "packages/hot-wallet/src-tauri",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["you"]

[workspace.dependencies]
# ==================== 核心序列化 ====================
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ==================== Tauri 核心 ====================
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }

# ==================== Tauri 插件 ====================
tauri-plugin-os = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-stronghold = "2"
tauri-plugin-barcode-scanner = "2"
tauri-plugin-biometric = "2"

# ==================== 二维码 ====================
qrcode = "0.14"
image = "0.24"
base64 = "0.22"

# ==================== 区块链核心 ====================
bitcoin = { version = "0.32", features = ["rand", "std"] }
ethers = { version = "2.0", features = ["legacy"] }
secp256k1 = { version = "0.29", features = ["rand", "global-context", "recovery"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
k256 = { version = "0.13", features = ["ecdsa"] }

# ==================== 密钥派生 ====================
bip39 = "2.0"
tiny-hderive = "0.3"

# ==================== 编码/哈希 ====================
hex = "0.4"
bs58 = "0.5"
bech32 = "0.11"
sha3 = "0.10"
sha2 = "0.10"
tiny-keccak = { version = "2.0", features = ["keccak"] }

# ==================== Kaspa ====================
kaspa-addresses = "0.15"

# ==================== 加密/安全 ====================
rand = "0.8"
argon2 = "0.5"
zeroize = "1.7"

# ==================== HTTP ====================
reqwest = { version = "0.12", features = ["json"] }

# 性能优化：为 scrypt crate（iota-crypto 的依赖）启用优化
# 解决 Stronghold.load() 在开发模式下缓慢的问题
# GitHub issue: https://github.com/tauri-apps/plugins-workspace/issues/2048
[profile.dev.package.scrypt]
opt-level = 3

