[package]
name = "offline-wallet"
version = "0.1.0"
description = "Offline, secure cryptocurrency wallet"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "offline_wallet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# BIP39 助记词和 BIP32 密钥派生
bip39 = "2.0"
tiny-hderive = "0.3"

# 以太坊相关
ethers = { version = "2.0", features = ["legacy"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
k256 = { version = "0.13", features = ["ecdsa"] }

# Bitcoin 相关
bitcoin = { version = "0.32", features = ["rand", "std"] }
secp256k1 = { version = "0.29", features = ["rand", "global-context", "recovery"] }

# Solana 相关
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
bs58 = "0.5"

# Tron 相关（使用以太坊兼容库，Tron 地址格式不同）
sha3 = "0.10"

# 通用加密
rand = "0.8"
zeroize = "1.7"
hex = "0.4"
sha2 = "0.10"

# AES-256-GCM 加密
aes-gcm = "0.10"

# Argon2id 密码哈希
argon2 = "0.5"

# 二维码生成
qrcode = "0.14"
image = "0.24"

# Base64 编码
base64 = "0.22"

# 获取系统目录
dirs = "5.0"

# 系统密钥库（Keychain/Keystore）
keyring = "2.0"

# 密码强度检测（简化实现，不依赖 zxcvbn）
# zxcvbn = "2.0"

# 时间戳和定时器
tokio = { version = "1", features = ["time"] }
chrono = "0.4"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"
tauri-plugin-biometric = "2"

